[package]
name = "secrets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.8.0", features = ["full"] }
anyhow = "1.0.42"
kube = "0.58.1"
kube-runtime = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
colorful = "0.2.1"
