[package]
name = "kube-secrets"
version = "0.5.0"
edition = "2024"
authors = ["Frank Wiles <frank@revsys.com>"]
description = "Command line utility to quickly display useful secrets in a Kubernetes namespace"
license = "BSD-3-Clause"
homepage = "https://github.com/frankwiles/kube-secrets"
keywords = ["kubernetes", "k8s", "kube"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "secrets"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
kube = "3.0.0"
kube-runtime = "3.0.0"
k8s-openapi = { version = "0.27.0", default-features = false, features = ["v1_34"] }
colorful = "0.3.2"
